Fixed smooth scroll on safari

--- a/src/WebComponents/Scroller/scroller.scss
+++ b/src/WebComponents/Scroller/scroller.scss
@@ -18,6 +18,7 @@
         outline: none !important;
         -ms-overflow-style: none;
         scrollbar-width: none;
+        -webkit-overflow-scrolling: touch;
 
         &::-webkit-scrollbar {
             display: none;
